# EDMCVKBConnector

./: .clinerules  .env  .env.example  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CATALOG_VALIDATION_REPORT.md  CHANGELOG.archive.json  CHANGELOG.json  CHANGELOG.md  CHANGELOG.release-please.md  CLAIMS_ANALYSIS.md  CLAUDE.md  CODE_COMPARISON.md  COMPARISON_SUMMARY.md  COMPARISON_V3_IMPLEMENTATIONS.md  COMPLETE_V3_MIGRATION.md  COMPLIANCE_REPORT.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  EDMC_EVENTS_CATALOG.md  EDMC_PLUGINS_MD_COMPLIANCE.md  EVENT_HANDLING_VERIFICATION.md  EXECUTIVE_SUMMARY.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_V3.md  INDEX.md  INSTALLATION.md  LICENSE  PLUGIN_REGISTRY.py  PROTOCOL_IMPLEMENTATION.md  README.md  README_ANALYSIS.md  RELEASE.md  SECURITY.md  SIGNALS_CATALOG_REFERENCE.md  (+39 more)
.claude/: settings.json
.gemini/commands/: agent.toml
.githooks/: post-merge
.github/: copilot-instructions.md
.github/workflows/: release-please.yml  release-plugin.yml
agent_artifacts/: README.md
agent_runner/: CHANGELOG.md
agent_runner/scripts/: check_sep.py  local_llm.py  log_change.py  manage.py  models.py  permissions.py  query_llm.py  run_plan.py
agent_system/: AGENTS.md  CHANGELOG.md
agent_system/config/: delegation-config.json  release-please-config.json
agent_system/core/: agent_maintenance.py  agent_management.py  agent_runner_utils.py  cli.py  get_latest_run_info.py  provider_registry.py  run_agent_plan.py  runtime_paths.py  tag_parser.py  test_agent_orchestration.py  test_agent_runner_logic.py  test_agent_workflows.py  test_all_providers.py  test_native_runners.py  test_provider_control.py
agent_system/dashboard/: agent_dashboard.py  simulate_dashboard.py  watch_run.py
agent_system/docs/: DEVELOPMENT.md
agent_system/reporting/: build_changelog.py  changelog_activity.py  changelog_utils.py  generate_release_notes.py  get_usage_stats.py  log_change.py  summarize_changelog.py  test_changelog_utils.py  test_get_usage_stats.py
agent_system/runners/: run_claude_plan.py  run_cline_plan.py  run_codex_plan.py  run_copilot_plan.py  run_gemini_plan.py  run_lmstudio_plan.py  run_localllm_plan.py  run_ollama_plan.py  run_openai_api_plan.py  run_opencode_plan.py
agent_system/workflows/: release-please.yml
data/: dev_paths.json.example  rules.json.example  signals_catalog.json
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  DRAG_DROP_FIX.md  EDITOR_UI_LAYOUT.md  EDMC_EVENTS_CATALOG.md  EDMC_PLUGINS_MD_COMPLIANCE.md  ENUM_EDITOR_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_V3.md  MULTI_SOURCE_IMPLEMENTATION.md  MULTI_SOURCE_SIGNALS.md  PROTOCOL_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  REAL_SERVER_SETUP.md  RECONNECTION_TEST_ANALYSIS.md  RULES_GUIDE.md  RULES_SCHEMA.md  RULES_TESTING_COMPLETE.md  RULE_EDITOR_GUIDE.md  RULE_EDITOR_IMPLEMENTATION.md  RULE_EDITOR_TUTORIAL.md  SIGNALS_REFERENCE.md  SIGNAL_COVERAGE_VALIDATION.md  STANDARDS_COMPLIANCE.md  TESTING_COMPLETE.md  UNREGISTERED_EVENTS_TESTS.md  UNREGISTERED_EVENTS_TRACKING.md  V3_IMPLEMENTATION_REVIEW.md  V3_MIGRATION_GUIDE.md  V3_RULE_EDITOR_GUIDE.md  V3_RULE_EDITOR_IMPLEMENTATION.md  V3_SCHEMA_REFERENCE.md  VISUAL_RULE_EDITOR.md  VKB_LINK_SETUP.md
docs/changelog/: CHANGELOG.archive.json  (+3 more)
recordings/: recorded_events_20260218_021548.jsonl  recorded_events_20260218_023357.jsonl
scripts/: README.md  add_missing_events.py  analyze_enum_signals.py  analyze_enums.py  auto_pull_after_release.py  bootstrap_dev_env.py  build_changelog.py  bump_version.py  changelog_activity.py  claude_run_plan.py  codex_results.py  convert_bools_to_enums.py  count_signals.py  delegation-config.json  deploy_to_edmc.py  dev_paths.py  event_signal_mapping.json  fix_test_events_context.py  generate_category_enum.py  generate_event_mapping.py  generate_release_notes.py  generated_category_enums.json  insert_category_enums.py  link_plugin_to_edmc_clone.py  log_change.py  migrate_changelog_ids.py  package_plugin.py  recover_all_enums.py  recover_enum_derives.py  release.ps1  release.sh  release_workflow.py  remove_event_signals.py  run_codex_plan.py  run_edmc_from_dev.py  run_plugin_dev.py  signal_catalog_editor.py  summarize_changelog.py  update_test_events.py  validate_enum_value_mappings.py  (+3 more)
test/: IMPLEMENTATION_SUMMARY.md  JOURNAL_FILE_TESTING.md  QUICK_START.md  README.md  README_REAL_EVENTS.md  REAL_EVENTS_TESTING.md  REAL_SERVER_TESTS.md  RULES_TESTS.md  RUN_COMPREHENSIVE_TESTS.md  conftest.py  dev_test.py  mock_vkb_server.py  run_all_tests.py  test_add_missing_events.py  test_agent_runner_logic.py  test_all_events.py  test_build_changelog.py  test_cascading_dropdowns.py  test_changelog_utils.py  test_config.json  test_config.py  test_edmc_integration.py  test_event_anonymizer.py  test_event_handler_vkb_link.py  test_ini_updater.py  test_integration.py  test_journal_files.py  test_load_vkb_shutdown.py  test_multisource_signals.py  test_nested_signals.py  test_onedrive_downloader.py  test_plugin_update_manager.py  test_production_workflow.py  test_real_vkb_server.py  test_rule_editor.py  test_rule_editor_config.py  test_rule_editor_simplified.py  test_rule_editor_ui.py  test_rule_editor_v3.py  test_rule_loading.py  (+15 more)
tests/: MOCK_SERVER_QUERIES.md  VKB_SERVER_TESTS.md  __init__.py  conftest.py  dev_test.py  mock_vkb_server.py  run_all_tests.py  test_config.py  test_integration.py  test_journal_files.py  test_real_vkb_server.py  test_rule_loading.py  test_rules_comprehensive.py  test_vkb_server_integration.py
vkb-link/: VKB-Link.ini
(+157 files in other folders)
