[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edmcvkbconnector"
version = "0.8.1"
description = "EDMC extension to forward Elite Dangerous events to VKB HOTAS hardware via TCP/IP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EDMC VKB Connector Contributors"}
]
keywords = ["edmc", "elite-dangerous", "vkb", "hotas", "hosas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "pylint>=2.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/Audumla/EDMCVKBConnector"
Repository = "https://github.com/Audumla/EDMCVKBConnector.git"

[tool.setuptools]
packages = ["edmcruleengine"]
package-dir = {"edmcruleengine" = "src/edmcruleengine"}

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
addopts = "-v -s --tb=short"
log_cli = true
log_cli_level = "DEBUG"
log_file_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file = "test_debug.log"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_file_date_format = "%H:%M:%S"

