[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0-alpha"
description = "Universal AI Agent Orchestration and Changelog Management System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Agent System Contributors"}
]
keywords = ["ai", "agent", "orchestration", "changelog", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",
    "windows-curses; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "pylint>=2.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/YourUsername/agent-system"
Repository = "https://github.com/YourUsername/agent-system.git"

[tool.setuptools]
packages = ["agent_system"]
package-dir = {"agent_system" = "agent_system"}

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["agent_system"]
pythonpath = ["."]
addopts = "-v -s --tb=short"
log_cli = true
log_cli_level = "DEBUG"
log_file_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file = "agent_system_test.log"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_file_date_format = "%H:%M:%S"

